corrections and improvements

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/0c2f8cb29c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="icon" type="image/svg+xml" href="/img/favicon.svg">
     <title>JhonFs</title>
     
 </head>
@@ -47,13 +48,6 @@
                     <a href="" target="_blank">
                         <div class="work_content">
                             <i class="fa-brands fa-java"></i>
-                        </div>
-                    </a>
-                </article>
-                <article class="work_cooming-soon">
-                    <a href="https://github.com/Jhonatafs/HuEscreva" target="_blank">
-                        <div class="work_content">
-                            <h1>em breve...</h1>
                         </div>
                     </a>
                 </article>
