--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                     <p>me chamo <span class="jfs">Jhonata</span>, estou estudante de ciência da computação, sou baiano, amo minha familia, ler, RPG e chá é melhor que café ;)</p>
             </section>
             <div id="socialmedia">
-                <a href="https://www.instagram.com/_jhoniris/" target="_blank"><i class="fa-brands fa-github-alt"></i></a>
+                <a href="https://github.com/Jhonatafs" target="_blank"><i class="fa-brands fa-github-alt"></i></a>
                 <a href="https://www.linkedin.com/in/jhonfs/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="ttps://www.instagram.com/_jhoniris/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://www.notion.so/jhonfs/c08a84a9669241b680cbc4851555470f?v=bb0691c0d3a24703987414309289c2c4" target="_blank"><i class="fa-solid fa-blog"></i></a> 
             </div>
             <address class="me-email">jhonfs.contato@gmail.com</address>
