--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header id="header">
             <section id="aboutme">
                     <img class="aboutme_I" src="img/me.jpg" alt="my photo"  width="130px" type="image/jpeg">
-                    <p>Meus Trabalhos e hobbies</p>
-                    <p>me chamo <span class="jfs">Jhonata</span>, estou estudante de ciência da computação, sou baiano, amo minha familia, ler, RPG e chá é melhor que café ;)</p>
+                    <p>Meus Trabalhos e hobbies!</p>
+                    <p>Me chamo <span class="jfs">Jhonata</span>, estou estudante de ciência da computação, sou baiano, amo minha familia, ler, RPG e chá é melhor que café ;)</p>
             </section>
             <div id="socialmedia">
                 <a href="https://github.com/Jhonatafs" target="_blank"><i class="fa-brands fa-github-alt"></i></a>
