--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                    </a>
                 </article>
                 <article class="work_notepad-jar">
-                    <a href="" target="_blank">
+                    <a href="https://github.com/Jhonatafs/HuEscreva" target="_blank">
                         <div class="work_content">
                             <i class="fa-brands fa-java"></i>
                         </div>
