--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </header>
         <section id="work">
                     <article class="work_jhonfs">
-                        <a href="#" target="_blank">
+                        <a href="#">
                             <div class="work_content">
                                 <img src="img/logo.svg" alt="Jhonfs" type="img/svg+xml">
                             </div>
