--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </a>
                     </article>
                 <article class="work_calculator-jar">
-                    <a href="https://github.com/Jhonatafs/Calculadora" target="_blank"></a>
+                    <a href="https://github.com/Jhonatafs/Calculadora" target="_blank">
                         <div class="work_content">
                             <i class="fa-brands fa-java"></i>
                         </div>
