--- a/index.html
+++ b/index.html
@@ -18,34 +18,34 @@
         <header id="header">
             <section id="aboutme">
                     <img class="aboutme_I" src="img/me.jpg" alt="my photo"  width="130px" type="image/jpeg">
-                    <p>Meus Trabalhos e hobbies!</p>
-                    <p>Me chamo <span class="jfs">Jhonata</span>, estou estudante de ciência da computação, sou baiano, amo minha familia, ler, RPG e chá é melhor que café ;)</p>
+                    <p>Meus Trabalhos e hobbies</p>
+                    <p>me chamo <span class="jfs">Jhonata</span>, estou estudante de ciência da computação, sou baiano, amo minha familia, ler, RPG e chá é melhor que café ;)</p>
             </section>
             <div id="socialmedia">
                 <a href="https://github.com/Jhonatafs" target="_blank"><i class="fa-brands fa-github-alt"></i></a>
                 <a href="https://www.linkedin.com/in/jhonfs/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="ttps://www.instagram.com/_jhoniris/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.notion.so/jhonfs/c08a84a9669241b680cbc4851555470f?v=bb0691c0d3a24703987414309289c2c4" target="_blank"><i class="fa-solid fa-blog"></i></a> 
+                <a href="https://www.instagram.com/_jhoniris/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="/blog.html" target="_self"><i class="fa-solid fa-blog"></i></a> 
             </div>
             <address class="me-email">jhonfs.contato@gmail.com</address>
         </header>
         <section id="work">
                     <article class="work_jhonfs">
-                        <a href="#">
+                        <a href="#" target="_blank">
                             <div class="work_content">
                                 <img src="img/logo.svg" alt="Jhonfs" type="img/svg+xml">
                             </div>
                         </a>
                     </article>
                 <article class="work_calculator-jar">
-                    <a href="https://github.com/Jhonatafs/Calculadora" target="_blank">
+                    <a href="https://github.com/Jhonatafs/Calculadora" target="_blank"></a>
                         <div class="work_content">
                             <i class="fa-brands fa-java"></i>
                         </div>
                    </a>
                 </article>
                 <article class="work_notepad-jar">
-                    <a href="https://github.com/Jhonatafs/HuEscreva" target="_blank">
+                    <a href="" target="_blank">
                         <div class="work_content">
                             <i class="fa-brands fa-java"></i>
                         </div>
