--- a/blog.html
+++ b/blog.html
@@ -93,14 +93,13 @@
                     <p>Porém, me deparei com a seguinte questão, como fazer para executar esse script salvo em um arquivo .sh? Busquei como acessar um arquivo e executa-lo, e para isso tive que entender e aprender os seguintes comandos:</p>
                     <ul>
                         <li>ls - Abreviação de "list", permite listar tudo que há no diretório atual.</li>
-                        <li>cd - Abreviação de "cahnge directory", permite acessar a um dirétorio dentro do diretório atual.</li>
+                        <li>cd - Abreviação de "change directory", permite acessar a um dirétorio dentro do diretório atual.</li>
                         <li>pws - Abreviação de "print working directory", mostra o caminho completo do diretorio atual.</li>
                         <li>cd .. - É a junção do comando cd com ponto seguido de ponto, o que da acesso ao dirétorio pai do seu atual.</li>
                         <li>bash - Permite executar um script shell</li>
                     </ul>
                     <p>Cheguei nesse resultado:</p>
                     <img src="/img/bahs_1.png" alt="Imgem com o exemplo do meu terminal">
-                    <p><br>Ps. Todos os dias estarei atualizando esse post, nele descreverei todo meu processo de aprendizado com shell.</p>
                     <div id="author">
                         <img class="img_author" src="img/me.jpg" alt="">
                         <address>JhonFS</address>
