--- a/en-US/index.html
+++ b/en-US/index.html
@@ -16,7 +16,7 @@
     <div id="bash">
         <header id="header">
             <h1 class="header__title">
-                <span class="header__title-arrow">[jhonfs@en-US</span>~<span class="header__title-arrow">]$</span>bash script.sh
+                <span class="header__title-arrow">[jhonfs@en-US</span>~<span class="header__title-arrow">]$</span>bash index.sh
             </h1>
             <nav class="header__nav">
                 <ul>
@@ -33,7 +33,7 @@
                         <a class="ls__folder" href="../pt-BR/blog.html" target="_self">Blog</a>
                     </li>
                     <li>
-                        <a class="ls__translate" href="../pt-BR/index.html" target="_self">Translate</a>
+                        <a class="ls__translate" href="../pt-BR/index.html" target="_self">pt-BR</a>
                     </li>
                 </ul>
             </nav>
