--- a/pt-BR/index.html
+++ b/pt-BR/index.html
@@ -16,7 +16,7 @@
     <div id="bash">
         <header id="header">
             <h1 class="header__title">
-                <span class="header__title-arrow">[jhonfs@en-US</span>~<span class="header__title-arrow">]$</span>bash script.sh
+                <span class="header__title-arrow">[jhonfs@pt-BR</span>~<span class="header__title-arrow">]$</span>bash index.sh
             </h1>
             <nav class="header__nav">
                 <ul>
@@ -27,13 +27,13 @@
                         <a class="ls__link" href="https://www.linkedin.com/in/jhonfs/" target="_blank">LinkedIn</a>
                     </li>
                     <li>
-                        <a class="ls__folder" href="contact.html" target="_self">Contact</a>
+                        <a class="ls__folder" href="../en-US/contact.html" target="_self">Contact</a>
                     </li>
                     <li>
                         <a class="ls__folder" href="/blog.html" target="_self">Blog</a>
                     </li>
                     <li>
-                        <a class="ls__translate" href="../pt-BR/index.html" target="_self">Translate</a>
+                        <a class="ls__translate" href="../en-US/index.html" target="_self">en-US</a>
                     </li>
                 </ul>
             </nav>
@@ -49,6 +49,11 @@
                 <p class="comment">#</p>
                 <p class="comment">#</p>
                 <h1 class="comment">#Works</h1>
+                <article>
+                    <a href="https://jhonfs.vercel.app">
+                        <p class="comment works__aticle-link">JHONFS='portifólio em formato de website, com o tema do bash'</p>
+                    </a>
+                </article>
                 <article>
                     <a href="https://jhonfs.vercel.app">
                         <p class="comment works__aticle-link">EM_BREVE='em breve estarei postando os trabalhos que fiz'</p>
