--- a/pt-BR/index.html
+++ b/pt-BR/index.html
@@ -30,7 +30,7 @@
                         <a class="ls__folder" href="../en-US/contact.html" target="_self">Contact</a>
                     </li>
                     <li>
-                        <a class="ls__folder" href="/blog.html" target="_self">Blog</a>
+                        <a class="ls__folder" href="blog.html" target="_self">Blog</a>
                     </li>
                     <li>
                         <a class="ls__translate" href="../en-US/index.html" target="_self">en-US</a>
