--- a/pt-BR/blog.html
+++ b/pt-BR/blog.html
@@ -21,7 +21,7 @@
             <nav id="menu">
                 <ul>
                     <li><a href="blog.html">Home</a></li>
-                    <li><a href="../index.html">Portfolio</a></li>
+                    <li><a href="index.html">Portfolio</a></li>
                     <li><a href="https://github.com/Jhonatafs" target="_blank">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/jhonfs/" target="_blank">LinkedIn</a></li>
                     <li><a href="https://www.instagram.com/_jhoniris/" target="_blank">Instagram</a></li>
