--- a/en-US/contact.html
+++ b/en-US/contact.html
@@ -37,8 +37,8 @@
         </header>
         <main>
             <section id="contact">
-                <p>#jhonatasade@gmail.com</p>
-                <p>#Intagram: @_jhoniris</p>
+                <p>#jhonfs.contato@gmail.com</p>
+                <p>#Instagram: @_jhoniris</p>
             </section>
         </main>
     </div>
