--- a/pt-BR/index.html
+++ b/pt-BR/index.html
@@ -42,8 +42,7 @@
             <section id="aboutme">
                 <p class="comment">#</p>
                 <p class="comment">#</p>
-                <p class="comment">#Sou o Jhonata, estudante de ciência da computação, baiano, apaixonado por leitura e RPG. Este site é para apresentar o que faço, e foi pensado para ter o visual do bash.</p>
-                <p class="comment">#--Chá é melhor que Café ;)</p>
+                <p class="comment">#Sou o Jhonata, estudante de ciência da computação, baiano, apaixonado por leitura, RPG e chá é melhor que café ;). Este site é para apresentar o que faço, e foi pensado para ter o visual do bash.</p>
             </section>
             <section id="works">
                 <p class="comment">#</p>
