--- a/en-US/index.html
+++ b/en-US/index.html
@@ -42,8 +42,7 @@
             <section id="aboutme">
                 <p class="comment">#</p>
                 <p class="comment">#</p>
-                <p class="comment">#Hello, I'm Jhonata, computer science student, Brazilian, passionate about reading and RPG. This website is to present what I do, and it was designed to have the look of Bash.</p>
-                <p class="comment">#--Tea is better than coffee ;)</p>
+                <p class="comment">#Hello, I'm Jhonata, computer science student, Brazilian, passionate about reading, RPG and tea is better than coffee ;). This website is to present what I do, and it was designed to have the look of Bash.</p>
             </section>
             <section id="works">
                 <p class="comment">#</p>
