--- a/pt-BR/blog.html
+++ b/pt-BR/blog.html
@@ -45,7 +45,7 @@
                     <div class="card__content">
                         <h3 class="card__title">Por onde Começar?</h3>
                         <p class="card__description">Estudar sozinho demanda tempo, foco e direcionamento.</p>
-                        <p class="card__time">Outubro, 2022</p>
+                        <p class="card__time">Setembro, 2022</p>
                     </div>
                 </article>
             </a>
