--- a/pt-BR/blog.html
+++ b/pt-BR/blog.html
@@ -50,7 +50,7 @@
                     </div>
                 </article>
             </a>
-            <a class="a_card" href="blog/por_onde_comecar_a_estudar_ciencias_da_computacao_sozinho.html">
+            <a class="a_card" href="blog/por_onde_comecar.html">
                 <article class="card">
                     <img class="card__img" src="https://www.altoastral.com.br/media/uploads/legacy/2017/11/homem-frente-labirinto-cinza.jpg" alt="">
                     <div class="card__content">
