--- a/pt-BR/blog.html
+++ b/pt-BR/blog.html
@@ -45,6 +45,7 @@
                 <div class="card__content">
                     <h3 class="card__title">Introdução a Ciências da Computação</h3>
                     <p class="card__description">Da necessidade de resolver problemas matemáticos o homem tornou uma maquina inteligente.</p>
+                    <p class="card__time">Outubro, 2022</p>
                 </div>
             </article>
         </a>
