--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,7 @@
                     <img src="https://cdn.pixabay.com/photo/2015/10/02/15/00/diary-968592_960_720.jpg" alt="">
                     <div class="content">
                         <h2>Como estudar sozinho ?</h2>
-                        <p>Por muito tempo vem-se distorcendo como as crianças devem estudar, qual o papel do professor e isso atrapalha nossa evolução nas mais diversas faculdades do saber.</p>
+                        <p>Saber por onde começar faz toda a diferença.</p>
                         <p class="date">26 de março, 2023</p>
                     </div>
                     <hr>
