--- a/index.html
+++ b/index.html
@@ -28,16 +28,18 @@
         <div class="text">
         <h1>Jhonata F. Sande</h1>
         <hr>
-        <p><strong>Endereço:</strong> Bahia, Brasil</p>
-        <p><strong>Cursando:</strong> Ciências da Computação</p>
-        <p><strong>Paixões:</strong> Livros, Xadres, e RPG</p>
-        <p><strong>E-mail:</strong> jhonfs.contato@gmail.com</p>
-        <div class="div-icon">
-            <a href="https://www.linkedin.com/in/jhonfs/" class="icon" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-            <a href="https://github.com/Jhonatafs" class="icon" target="_blank"><i class="fa-brands fa-github-alt"></i></a>
-            <a href="https://www.instagram.com/_jhoniris/" class="icon" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://wa.me/5577981398699?text=Ol%C3%A1,%20quero%20fazer%20uma%20or%C3%A7amento." class="icon" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-        </div>
+        <div class="text-text">
+            <p><strong>Endereço:</strong> Bahia, Brasil</p>
+            <p><strong>Cursando:</strong> Ciências da Computação</p>
+            <p><strong>Paixões:</strong> Livros, Xadres, e RPG</p>
+            <p><strong>E-mail:</strong> jhonfs.contato@gmail.com</p>
+            <div class="div-icon">
+                <a href="https://www.linkedin.com/in/jhonfs/" class="icon" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://github.com/Jhonatafs" class="icon" target="_blank"><i class="fa-brands fa-github-alt"></i></a>
+                <a href="https://www.instagram.com/_jhoniris/" class="icon" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://wa.me/5577981398699?text=Ol%C3%A1,%20quero%20fazer%20uma%20or%C3%A7amento." class="icon" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+            </div>
         </div>
         <img src="img/eu.png" alt="minha foto">
     </div>
