--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Jhonata F. Sande</h1>
         <hr>
         <div class="text-text">
-            <p><strong>Endereço:</strong> Bahia, Brasil</p>
+            <p><strong>Localização:</strong> Bahia, Brasil</p>
             <p><strong>Cursando:</strong> Ciências da Computação</p>
             <p><strong>Paixões:</strong> Livros, Xadres, e RPG</p>
             <p><strong>E-mail:</strong> jhonfs.contato@gmail.com</p>
