--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Jhonata F. Sande</h1>
         <hr>
         <div class="text-text">
-            <p><strong>Localização:</strong> Bahia, Brasil</p>
+            <p><strong>Sou da</strong> Bahia, Brasil</p>
             <p><strong>Cursando:</strong> Ciências da Computação</p>
             <p><strong>Paixões:</strong> Livros, Xadres, e RPG</p>
             <p><strong>E-mail:</strong> jhonfs.contato@gmail.com</p>
@@ -47,13 +47,40 @@
         <div id="portfolio">
             <h1>.portfólio</h1>
             <hr>
+            <div class="align"></div>
             <div class="cards">
+                <!--
+                    <a href="https://csteam.vercel.app/" target="_blank">                
+                        <div class="content">
+                            <div class="card">
+                                <img src="img/csteam.jpg" alt="">
+                                <div class="text">
+                                    <h2>CS Team</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                -->
                 <a href="https://csteam.vercel.app/" target="_blank">                
                     <div class="content">
                         <div class="card">
                             <img src="img/csteam.jpg" alt="">
                             <div class="text">
                                 <h2>CS Team</h2>
+                                <p>A CS Team é uma academia fundada pelo meu pai, criei uma página para fim de estudos.</p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="projects/jogo_da_velha.html" target="_blank">                
+                    <div class="content">
+                        <div class="card">
+                            <img src="img/jogo_da_velha.jpg" alt="">
+                            <div class="text">
+                                <h2>Jogo da Velha</h2>
+                                <p>Tecnologias:
+                                    <i class="fa-brands fa-js"></i> <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i></p>
                             </div>
                         </div>
                     </div>
