--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,7 @@
                 <article>
                     <img src="https://cdn.pixabay.com/photo/2015/10/02/15/00/diary-968592_960_720.jpg" alt="">
                     <div class="content">
-                        <h2>Como estudar sozinho ?</h2>
+                        <h2>Por onde começar a estudar sozinho ?</h2>
                         <p>Saber por onde começar faz toda a diferença.</p>
                         <p class="date">26 de março, 2023</p>
                     </div>
