--- a/projects/jogo_da_velha.html
+++ b/projects/jogo_da_velha.html
@@ -17,7 +17,7 @@
 <body>
     <div id="topbar">
         <nav>
-            <a href="index.html">
+            <a href="../index.html">
                 <h1>JhonFs</h1>
             </a>
             <ul>
