--- a/index.html
+++ b/index.html
@@ -50,16 +50,17 @@
             <div class="align"></div>
             <div class="cards">
                 <!--
-                    <a href="https://csteam.vercel.app/" target="_blank">                
-                        <div class="content">
-                            <div class="card">
-                                <img src="img/csteam.jpg" alt="">
-                                <div class="text">
-                                    <h2>CS Team</h2>
-                                </div>
+                    <a href="" target="_blank">                
+                    <div class="content">
+                        <div class="card">
+                            <img src="" alt="">
+                            <div class="text">
+                                <h2></h2>
+                                <p></p>
                             </div>
                         </div>
-                    </a>
+                    </div>
+                </a>
                 -->
                 <a href="https://csteam.vercel.app/" target="_blank">                
                     <div class="content">
@@ -79,6 +80,19 @@
                             <img src="img/jogo_da_velha.jpg" alt="">
                             <div class="text">
                                 <h2>Jogo da Velha</h2>
+                                <p>Tecnologias:
+                                    <i class="fa-brands fa-js"></i> <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i></p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="projects/gerarcor/hex.html " target="_blank">                
+                    <div class="content">
+                        <div class="card">
+                            <img src="img/gerarcor.jpg" alt="">
+                            <div class="text">
+                                <h2>Gerador de Cores</h2>
                                 <p>Tecnologias:
                                     <i class="fa-brands fa-js"></i> <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i></p>
                             </div>
