--- a/article/como-estudar-sozinho.html
+++ b/article/como-estudar-sozinho.html
@@ -23,7 +23,7 @@
             <ul>
                 <li><a href="../blog.html"><i class="fa-solid fa-arrow-left"></i></a></li>
                 <li><a href="../index.html">Portfólio</a></li>
-                <li><button onclick="changeThemeBlog()"><i class="fa-solid fa-brush"></i></button></li>
+                <li><button onclick="changeTheme()"><i class="fa-solid fa-brush"></i></button></li>
             </ul>
         </nav>
     </div>
