--- a/index.html
+++ b/index.html
@@ -33,15 +33,16 @@
             <p><strong>Cursando:</strong> Ciências da Computação</p>
             <p><strong>Paixões:</strong> Livros, Xadres, e RPG</p>
             <p><strong>E-mail:</strong> jhonfs.contato@gmail.com</p>
+            <p><strong>Habilidades:</strong> Java, JavaScript, MySQL, HTML5, CSS3</p>
             <div class="div-icon">
                 <a href="https://www.linkedin.com/in/jhonfs/" class="icon" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="https://github.com/Jhonatafs" class="icon" target="_blank"><i class="fa-brands fa-github-alt"></i></a>
                 <a href="https://www.instagram.com/_jhoniris/" class="icon" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://wa.me/5577981398699?text=Ol%C3%A1,%20quero%20fazer%20uma%20or%C3%A7amento." class="icon" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
-            </div>
         </div>
-        <img src="img/eu.png" alt="minha foto">
+    </div>
+    <img src="img/eu.png" alt="minha foto">
     </div>
     <main>
         <div id="portfolio">
@@ -50,7 +51,7 @@
             <div class="align"></div>
             <div class="cards">
                 <!--
-                    <a href="" target="_blank">                
+                <a href="" target="_blank">                
                     <div class="content">
                         <div class="card">
                             <img src="" alt="">
@@ -62,6 +63,20 @@
                     </div>
                 </a>
                 -->
+                <a href="projects/jogo_da_velha.html" target="_blank">                
+                    <div class="content">
+                        <div class="card">
+                            <img src="img/jogo_da_velha.jpg" alt="">
+                            <div class="text">
+                                <h2>Jogo da Velha</h2>
+                                <p>IA em faze incial.</p>
+                                <p>Tecnologias:
+                                    <i class="fa-brands fa-js"></i> <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i></p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
                 <a href="https://csteam.vercel.app/" target="_blank">                
                     <div class="content">
                         <div class="card">
@@ -69,19 +84,6 @@
                             <div class="text">
                                 <h2>CS Team</h2>
                                 <p>A CS Team é uma academia fundada pelo meu pai, criei uma página para fim de estudos.</p>
-                            </div>
-                        </div>
-                    </div>
-                </a>
-
-                <a href="projects/jogo_da_velha.html" target="_blank">                
-                    <div class="content">
-                        <div class="card">
-                            <img src="img/jogo_da_velha.jpg" alt="">
-                            <div class="text">
-                                <h2>Jogo da Velha</h2>
-                                <p>Tecnologias:
-                                    <i class="fa-brands fa-js"></i> <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i></p>
                             </div>
                         </div>
                     </div>
@@ -95,6 +97,35 @@
                                 <h2>Gerador de Cores</h2>
                                 <p>Tecnologias:
                                     <i class="fa-brands fa-js"></i> <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i></p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="https://github.com/Jhonatafs/Calculadora" target="_blank">                
+                    <div class="content">
+                        <div class="card">
+                            <img src="/img/calculadora.jpg" alt="">
+                            <div class="text">
+                                <h2>Calculadora</h2>
+                                <p>Tecnologias:
+                                    <i class="fa-brands fa-java"></i>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="https://github.com/Jhonatafs/HuEscreva" target="_blank">                
+                    <div class="content">
+                        <div class="card">
+                            <img src="/img/editordetexto.jpg" alt="">
+                            <div class="text">
+                                <h2>HuEscreva</h2>
+                                <p>Editor de Texto Simples</p>
+                                    <p>Tecnologias:
+                                        <i class="fa-brands fa-java"></i>
+                                </p>
                             </div>
                         </div>
                     </div>
