--- a/projects/jogo_da_velha.html
+++ b/projects/jogo_da_velha.html
@@ -42,9 +42,9 @@
             <div id="b8" class="home" onclick="move('#b8')"></div>
         </div>
         <div id="buttons">
-            <button id="reset" class="btn" onclick="reset()"><i class="fa-solid fa-rotate-left"></i></button>
-            <button id="pvsp" class="btn" onclick="pvsp()"><i class="fa-solid fa-person"></i> VS <i class="fa-solid fa-person"></i></button>
-            <button id="pvsc" class="btn"><i class="fa-solid fa-person" disabled></i> VS <i class="fa-solid fa-robot"></i></button>
+            <button id="reset" class="btn" onclick="reset(questReset())"><i class="fa-solid fa-rotate-left"></i></button>
+            <button id="pvp" class="btn active-mode" onclick="pvp()"><i class="fa-solid fa-person"></i> VS <i class="fa-solid fa-person"></i></button>
+            <button id="pve" class="btn" onclick="pve()"><i class="fa-solid fa-person"></i> VS <i class="fa-solid fa-robot"></i></button>
         </div>
     </div>
 </body>
