--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
                             <div class="text">
                                 <h2>CS Team</h2>
                                 <p>A CS Team é uma academia fundada pelo meu pai, criei uma página para fim de estudos.</p>
+                                <p>Tecnologias:
+                                    <i class="fa-brands fa-js"></i> <i class="fa-brands fa-html5"></i> <i class="fa-brands fa-css3-alt"></i></p>
                             </div>
                         </div>
                     </div>
