--- a/index.html
+++ b/index.html
@@ -135,5 +135,8 @@
             </div>
         </div>
     </main>
+    <footer>
+        <p>Sonhar grande dá o mesmo trabalho que sonhar pequeno.</p>
+    </footer>
 </body>
 </html>
