--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </div>
                 </a>
                 -->
-                <a href="projects/jogo_da_velha.html" target="_blank">                
+                <a href="projects/jogo_da_velha.html">                
                     <div class="content">
                         <div class="card">
                             <img src="img/jogo_da_velha.jpg" alt="">
@@ -91,7 +91,7 @@
                     </div>
                 </a>
 
-                <a href="projects/gerarcor/hex.html " target="_blank">                
+                <a href="projects/gerarcor/hex.html ">                
                     <div class="content">
                         <div class="card">
                             <img src="img/gerarcor.jpg" alt="">
