--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
             </a>
             <ul>
                 <li><a href="index.html">Portfólio</a></li>
-                <li><button onclick="changeThemeBlog()"><i class="fa-solid fa-brush"></i></button></li>
+                <li><button onclick="changeTheme()"><i class="fa-solid fa-brush"></i></button></li>
             </ul>
         </nav>
     </div>
