--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" prefix="ov: http://open.vocab.org/terms/">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -63,6 +63,19 @@
                     </div>
                 </a>
                 -->
+                <a href="https://userstyles.world/style/9765/habitica-minimalist-et-obscura" target="_blank">                
+                    <div class="content">
+                        <div class="card">
+                            <img src="img/habitica.jpg" alt="">
+                            <div class="text">
+                                <h2>Estilização do Habitica.com</h2>
+                                <p>Tecnologia:
+                                    <i class="fa-brands fa-css3-alt"></i></p>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
                 <a href="projects/jogo_da_velha.html">                
                     <div class="content">
                         <div class="card">
@@ -110,7 +123,7 @@
                             <img src="/img/calculadora.jpg" alt="">
                             <div class="text">
                                 <h2>Calculadora</h2>
-                                <p>Tecnologias:
+                                <p>Tecnologia:
                                     <i class="fa-brands fa-java"></i>
                                 </p>
                             </div>
@@ -125,7 +138,7 @@
                             <div class="text">
                                 <h2>HuEscreva</h2>
                                 <p>Editor de Texto Simples</p>
-                                    <p>Tecnologias:
+                                    <p>Tecnologia:
                                         <i class="fa-brands fa-java"></i>
                                 </p>
                             </div>
